--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"author":"Salman Thasleem",
 	"name": "fcc-learn-npm-package-json",
+	"description": "A beginner FCC project",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
