--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"author":"Salman Thasleem",
 	"name": "fcc-learn-npm-package-json",
 	"description": "A beginner FCC project",
+	"keywords": ["freecodecamp","beginner","npm","nodejs", "APSs","Microservices"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
