--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A beginner FCC project",
 	"keywords": ["freecodecamp","beginner","npm","nodejs", "APSs","Microservices"],
 	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
